FIXED card alignement

--- a/mobileSearchFilter.css
+++ b/mobileSearchFilter.css
@@ -1,7 +1,7 @@
 #mobileSearchFilter {
   background-color: transparent; /* or transparent or your desired color */
   position: fixed;
-  top: 80px;
+  top: 66px;
   left: 0;
  
   bottom: 0;
